<resources>
    <string name="app_name">montak</string>
    <string name="my_orders">My Orders</string>
    <string name="moontak_to_the_front_of_your_shop">moontak to the front of your shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inner_add_new_location">InnerAddNewLocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tahini">alkaseih golden tahini 450gm</string>
    <string name="title_activity_cart">cartActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="error">err#101</string>
    <string name="search"> Search</string>
    <string name="products_search">Products Search</string>
    <string name="search_empty">search empty</string>
    <string name="categories">categories</string>
    <string name="welcome_to_moontak">Welcome to Moontak</string>
    <string name="which_language_do_you_prefer">which language do you prefer</string>
    <string name="continue1">Continue</string>
    <string name="skip">skip</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign in</string>
    <string name="what_is_your_number">What is Your Number</string>
    <string name="we_will_send_you_code_to_verify_the_information">we will send you code to verify the information</string>
    <string name="create_new_account">Create New Account</string>
    <string name="don_t_have_account">Don\'t Have Account</string>
    <string name="need_any_help">Need any help?</string>
    <string name="contact_support">Contact Support</string>
    <string name="have_account">Have Account?</string>
    <string name="log_in">Log In</string>
    <string name="personal_information">Personal Information</string>
    <string name="owner_of_the_establishment_name">Owner of the Establishment Name</string>
    <string name="establishment_name">Establishment Name</string>
    <string name="email">Email</string>
    <string name="sector">Sector</string>
    <string name="sector_type">Sector Type</string>
    <string name="horika_type">horika type</string>
    <string name="address">Address</string>
    <string name="choose_location_from_map">Choose Location From Map</string>
    <string name="choose_your_location_manually">Choose Your Location Manually</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="address_in_detail">Address in Detail</string>
    <string name="your_shop_s_photo">Your shop\'s photo</string>
    <string name="i_approve_on">I Approve On</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="upload">Upload</string>
    <string name="send">Send</string>
    <string name="add_your_location_using_map">Add Your Location Using Map</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_you_a_verification_code_via_your_phone_number">We have sent you a verification code via your phone number</string>
    <string name="main">Main</string>
    <string name="search1">Search</string>
    <string name="favorite">Favorite</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="about_us">About us</string>
    <string name="privacypolicy">PrivacyPolicy</string>
    <string name="customer_service">customer Service</string>
    <string name="change_language">Change Language</string>
    <string name="exit">Exit</string>
    <string name="delete_all">delete all</string>
    <string name="add_item">add item</string>
    <string name="add_to_cart">add to cart</string>
    <string name="description">description</string>
    <string name="cart">Cart</string>
    <string name="food">Food</string>
    <string name="establishment_name_1">Establishment name:</string>
    <string name="lurime">Lurime</string>
    <string name="personal_data">personal data</string>
    <string name="save">Save</string>
    <string name="continue_to_pay">Continue to Pay</string>
    <string name="update_cart">Update Cart</string>
    <string name="final_total">Final Total</string>
    <string name="add_new_location">Add New Location</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_online">Pay Online</string>
    <string name="search_in_food">Search in Food</string>
    <string name="my_profile">My Profile</string>
    <string name="save_my_location">Save My Location</string>
    <string name="update">Update</string>
</resources>