<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/main"/>
        <item
            android:id="@+id/search"
            android:icon="@drawable/search"
            android:title="@string/search1"/>
        <item
            android:id="@+id/placeHolder"
            android:title=""/>
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/love"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/notifications"
            android:title="@string/notifications"/>
    </group>
</menu>