<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".LoginActivity"
    android:background="@color/blue_500"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="-90dp"
            android:layout_marginBottom="-90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="40dp"
            />

        <include
            android:id="@+id/included_tap"
            layout="@layout/login_app_bar"
            />
        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/included_tap"
            android:textSize="20sp"
            android:layout_margin="40dp"
            android:fontFamily="@font/arabicregular"
            />
        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/welcome"
            app:layout_constraintTop_toBottomOf="@id/welcome"
            android:textSize="20sp"
            android:fontFamily="@font/arabicsemibold"
            />
        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toBottomOf="@id/signInLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/what_is_your_number"
                    android:textColor="@color/blue_500"
                    android:textSize="17sp"
                    android:fontFamily="@font/arabicsemibold"
                    android:layout_marginTop="45dp"
                    android:layout_marginStart="25dp"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edit_text"
                    >

                    <androidx.cardview.widget.CardView
                        android:id="@+id/internationalCodeCard"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        app:cardBackgroundColor="#ECECEC"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="0dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:src="@drawable/jordan" />
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:id="@+id/smartPhoneIcon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="15sp"
                        android:src="@drawable/smartphone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        app:layoutDescription="@id/phoneNumberET"
                        android:id="@+id/phoneNumberET"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empty_edit_text"
                        android:textSize="16sp"
                        android:textColor="#7F7F7F"
                        android:fontFamily="@font/arabicsemibold"
                        android:hint="079"
                        android:paddingStart="15sp"
                        android:inputType="phone"
                        android:singleLine="true"
                        android:paddingEnd="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/smartPhoneIcon"
                        app:layout_constraintStart_toEndOf="@+id/internationalCodeCard"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:textSize="11sp"
                    android:fontFamily="@font/arabicregular"
                    android:text="@string/we_will_send_you_code_to_verify_the_information"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/per"
                    >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/continueBtn"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    app:cornerRadius="25dp"
                    android:text="@string/continue1"
                    android:textSize="16sp"
                    android:fontFamily="@font/arabicsemibold"
                    android:textAllCaps="false"
                    android:layout_margin="25dp"
                    app:layout_constraintBottom_toBottomOf="@+id/per"
                    app:layout_constraintEnd_toEndOf="@id/per"
                    app:layout_constraintStart_toStartOf="@+id/per"
                    app:layout_constraintTop_toTopOf="@id/per"
                    />
                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/per"
                        app:layout_constraintEnd_toEndOf="@id/per"
                        app:layout_constraintStart_toStartOf="@+id/per"
                        app:layout_constraintTop_toTopOf="@id/per" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/don_t_have_account"
                    android:textSize="15sp"
                    android:textColor="@color/black_200"
                    android:fontFamily="@font/arabicsemibold"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/createNewAccountBtn"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_margin="25dp"
                    android:fontFamily="@font/arabicsemibold"
                    android:text="@string/create_new_account"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    app:cornerRadius="25dp"
                    app:strokeColor="@color/blue_500"
                    app:strokeWidth="2dp" />

                <LinearLayout
                    android:layout_marginBottom="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_any_help"
                        android:textSize="15sp"
                        android:textColor="@color/black_200"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_support"
                        android:textSize="15sp"
                        android:fontFamily="@font/arabicsemibold"
                        android:textColor="@color/black_200"
                        android:layout_marginStart="5dp"
                        />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>