<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/included_tap"
                layout="@layout/fav_app_bar" />

            <TextView
                android:id="@+id/cartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/arabicsemibold"
                android:text="@string/cart"
                android:textColor="@color/blue_500"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/included_tap" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cartLabel"
                app:layout_constraintVertical_bias="0.0"
                tools:itemCount="6"
                tools:listitem="@layout/cart_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/cart_card_bottom_back"
        android:backgroundTint="@color/buttom_card_back"
        android:elevation="100dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:paddingTop="40dp"
        >
        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_total"
            android:textSize="14sp"
            android:fontFamily="@font/arabicmedium"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />
        <TextView
            android:id="@+id/totalTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10.00 JOD"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/blue_500"
            android:fontFamily="@font/arabicmedium"
            android:layout_marginEnd="5dp"
            />
        <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"

            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueToPayBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="50"
                app:cornerRadius="25dp"
                android:textAllCaps="false"
                android:text="@string/continue_to_pay"
                android:fontFamily="@font/arabicmedium"
                android:textSize="9sp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateCartBtn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="50"
                app:cornerRadius="25dp"
                android:text="@string/update_cart"
                android:textSize="9sp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/arabicmedium"
                />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>